syntax = "proto3";

package user.v1;

option go_package = "github.com/anhbkpro/videos/2022/07/23/gen/go/user/v1;userpb";

import "user/v1/user.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
}

message GetUserRequest {
  string uuid = 1;
}

message GetUserResponse {
  User user = 1;
}
